--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Docker_ci
+name: Docker_CI
 
 # Controls when the workflow will run
 on:
