--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -41,4 +41,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/github_action:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/asos_scraper:latest
