--- a/.github/workflows/scraper_ci.yml
+++ b/.github/workflows/scraper_ci.yml
@@ -16,24 +16,24 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
 #   # This workflow contains 
-#   unittest:
-#     # The type of runner that the job will run on
-#     runs-on: ubuntu-latest
+  unittest:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
 
-#     # Steps represent a sequence of tasks that will be executed as part of the job
-#     steps:
-#       # 1.Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-#       - uses: actions/checkout@v2
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # 1.Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
-#       # 2.Install denpendencied
-#       - name: Install dependencies
-#         run: |
-#           python -m pip install --upgrade pip
-#           pip install -r requirements.txt
+      # 2.Install denpendencied
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
           
-#       # 3.Runs unit testing using the runners shell
-#       - name: Run unit test
-#         run: python -m test.test_project
+      # 3.Runs unit testing using the runners shell
+      - name: Run unit test
+        run: python -m test.test_project
         
   docker_action:
     # The type of runner that the job will run on
